<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache.datasketches</groupId>
    <artifactId>datasketches-memory</artifactId>
    <version>7.0.0</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>datasketches-memory-java17_21</artifactId>
  <name>${project.artifactId}</name>
  <packaging>jar</packaging>

  <properties>
    <java.version>17</java.version>
    <jdk-toolchain.version>${java.version}</jdk-toolchain.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.javadoc.skip>false</maven.javadoc.skip>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <!-- export.jdk.internal.misc is used to call public Unsafe & public VM -->
    <export.jdk.internal.misc>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</export.jdk.internal.misc>
    <!-- export.sun.nio.ch is used to open FileChannelImpl for DirectBuffer-->
    <export.sun.nio.ch>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</export.sun.nio.ch>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
    </dependency>
    <dependency>
      <groupId>net.openhft</groupId>
      <artifactId>zero-allocation-hashing</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork> <!-- required if Maven is using a different JVM -->
          <compilerArgs>
            <arg>${export.jdk.internal.misc}</arg>
            <arg>${export.sun.nio.ch}</arg>
          </compilerArgs>
          
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            @{argLine}
            @{jvm.args}
            ${export.jdk.internal.misc}
            ${export.sun.nio.ch}
            -Dorg.slf4j.simpleLogger.log.org.testng=warn
          </argLine>
          <trimStackTrace>false</trimStackTrace>
          <useFile>true</useFile>
          <useManifestOnlyJar>false</useManifestOnlyJar>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <reportsDirectory>${project.build.directory}/test-output/${maven.build.timestamp}</reportsDirectory>
          <perCoreThreadCount>false</perCoreThreadCount>
          <properties>
            <property>
              <name>verbose</name>
              <value>0</value> 
            </property>
          </properties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-toolchains-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>toolchain</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <toolchains>
            <jdk>
              <version>${java.version}</version> <!-- override -->
            </jdk>
          </toolchains>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals><goal>add-source</goal></goals>
            <configuration>
              <sources>
                <source>${project.basedir}/../datasketches-memory-common/src/main/java</source>
                <source>${project.basedir}/../datasketches-memory-common/src/main/javadoc</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>add-test-source</id>
            <phase>generate-test-sources</phase>
            <goals><goal>add-test-source</goal></goals>
            <configuration>
              <sources>
                <source>${project.basedir}/../datasketches-memory-common/src/test/java</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
      
     </plugins>
  </build>

</project>
